--- a/notebooks/Cypher_examples_using_neo4j_python_driver.ipynb
+++ b/notebooks/Cypher_examples_using_neo4j_python_driver.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,14 @@
     "\n",
     "uri=\"bolt://localhost\"\n",
     "user = 'neo4j'\n",
-    "password = 'nimda'\n",
+    "password = 'jedi'\n",
     "\n",
-    "uri=\"neo4j+s://ed23282c.databases.neo4j.io\"\n",
-    " \n",
-    " "
+    "uri=\"neo4j+s://3c6eb2f6.databases.neo4j.io\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "325\n"
+      "326\n"
      ]
     }
    ],
    "source": [
+    "## simple example to test connection & return results\n",
     "result = conn.query('MATCH (n) RETURN COUNT(n) AS ct')\n",
     "# print(result)\n",
     "# Consume the result object\n",
@@ -102,26 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chewbacca 77\n",
-      "Leia Organa 69\n",
-      "C-3PO 54\n",
-      "Luke Skywalker 43\n",
-      "Finn 23\n",
-      "R2-D2 18\n",
-      "Rey 17\n",
-      "LANDO 12\n",
-      "Obi-Wan Kenobi 10\n",
-      "BB8 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load any parameters \n",
     "\n",
@@ -150,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -174,38 +156,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>otherName</th>\n",
-       "      <th>interactionCount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Chewbacca</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Leia Organa</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C-3PO</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     otherName  interactionCount\n",
-       "0    Chewbacca                77\n",
-       "1  Leia Organa                69\n",
-       "2        C-3PO                54"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +188,7 @@
     "result = conn.query(query, parameters=params)\n",
     " \n",
     "# create a dataframe from Cypher Resultset    \n",
-    "dtf_data = DataFrame([dict(_) for _ in result])\n",
+    "dtf_data = pd.DataFrame([dict(_) for _ in result])\n",
     "dtf_data.head(3)\n"
    ]
   },
@@ -237,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'total': 5, 'batches': 1, 'time': 0.4400358200073242}"
+       "{'total': 5, 'batches': 1, 'time': 0.1604321002960205}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
