--- a/notebooks/Cypher_examples_using_neo4j_python_driver.ipynb
+++ b/notebooks/Cypher_examples_using_neo4j_python_driver.ipynb
@@ -4,83 +4,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Star-Wars Aura Demo Notebook \n",
+    "# Star-Wars Aura Demo Notebook  v 1.2\n",
     "## Cypher Examples Using Neo4j Python Driver\n",
     "\n",
     "\n",
     "## Overview\n",
-    "To demonstrate how to connnect to a Neo4j instance running in Aura.  This uses the Neo4j Driver version\n",
+    "To demonstrate how to read and write data to a Neo4j instance running in AuraDB using the Neo4j Python Driver.\n",
+    "\n",
     "### Created: September 11, 2022\n",
-    "### Author:  Mark Quinsland\n",
+    "#### Latest version 1.2 - February 3, 2023\n",
+    "\n",
+    "### Author:  Mark Quinsland \n",
+    "mark.quinsland@neo4j.com\n",
     "\n",
     "### Additional resources:\n",
-    "Some of this material is based on the excellent, highly-recommended \"Bite-Sized Neo4j for Data Scientiests\" series of notebooks and youtube clips by CJ Sullivan. \n",
+    "Some of this material is based on the excellent, highly-recommended \"Bite-Sized Neo4j for Data Scientiests\" series of notebooks and youtube clips by former Neo4j data scientist CJ Sullivan. For some of the notebooks in CJ's series, the official Neo4j Python driver named 'neo4j' is used.  In others, the community-supported 'py2neo' driver is used.  \n",
+    "Sample notebooks and tutorials may be found here:  \n",
     "\n",
-    "#### Note on Python Drivers & Python Client:\n",
-    "For some of the notebooks in CJ's series, the official Neo4j Python driver named 'neo4j' is used.  In others, the community-supported 'py2neo' driver is used.  This notebook uses the 'neo4j' driver.  Since the publishin of the Bite-Sized series, Neo4j released a new Python client named 'graphdatascience' that supports additional Graph Data Science features.  This client should only be used to access Neo4j servers where the GDS library has been installed.    Examples using the new graphdatascience library are available from the github repo containing this file.  \n",
+    "- https://github.com/cj2001/bite_sized_data_science\n",
+    "- https://youtu.be/Niys6g6NFfw?list=PL9Hl4pk2FsvVShoT5EysHcrs-hyCsXaWC\n",
+    "- https://medium.com/@cj2001\n",
     "\n",
-    "https://github.com/cj2001/bite_sized_data_science\n",
     "\n",
-    "https://youtu.be/Niys6g6NFfw?list=PL9Hl4pk2FsvVShoT5EysHcrs-hyCsXaWC\n",
+    "## A Note about Neo4j's family of Python Drivers.\n",
     "\n",
-    "https://medium.com/@cj2001\n",
+    "There are 3 commonly used Python drivers for Neo4j.  This notebook uses the official Neo4j Python driver. \n",
+    "\n",
+    "### neo4j  driver (Official Neo4j Python Driver)\n",
+    "This is the official, supported Neo4j Python driver and is continually being updated to utilize Neo4j's latest features.  The driver is designed to work with a wide variety of Neo4jDB instances including on-prem, AWS, GCP, Azure, and AuraDB.  It greatly simplifies connectivity to Neo4j clusters.\n",
+    "- https://neo4j.com/docs/api/python-driver/current/\n",
+    "- https://neo4j.com/docs/python-manual/current/\n",
+    "\n",
+    "\n",
+    "### graphdatascience driver ( GDS Clients only)\n",
+    "Neo4j recently released a new Python client named 'graphdatascience' that supports additional Graph Data Science features.  This client should only be used to access Neo4j servers where the GDS library has been installed.    Documentation and examples using the new graphdatascience library are available from the following links.\n",
+    "- https://pypi.org/project/graphdatascience/\n",
+    "- https://neo4j.com/developer-blog/get-started-with-neo4j-gds-python-client/\n",
+    "\n",
+    "### py2neo (community supported driver)\n",
+    "\n",
+    "Py2neo is a simple-to-use library and was a very popular alternative to the official Neo4j driver. However, it does not provide support for enterprise Neo4j features or for recent Neo4j versions.  \n",
+    "https://py2neo.org/v4/\n",
+    "\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install Neo4j Python Driver - pip install neo4j"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use pip install neo4j\n",
+    "\n",
     "from neo4j import GraphDatabase\n",
-    "import logging\n",
     "from neo4j.exceptions import ServiceUnavailable\n",
     "import pandas as pd\n",
-    "import time\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connection Values \n",
+    "- downloaded at time of instance creation!\n",
+    "#### Note: Take appropriate measures to keep authorization information secret.  Values are hardcoded here for simplicity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#aura connection details\n",
+    "#aura connection details - downloaded at time of instance creation!\n",
     "\n",
-    "uri=\"bolt://localhost\"\n",
-    "user = 'neo4j'\n",
-    "password = 'jedi'\n",
-    "\n",
-    "uri=\"neo4j+s://3c6eb2f6.databases.neo4j.io\"\n"
+    "NEO4J_URI=\"neo4j+s://d44b75fb.databases.neo4j.io\"\n",
+    "NEO4J_USERNAME=\"neo4j\"\n",
+    "NEO4J_PASSWORD=\"UmFkV80lKjANvfimU3RBVpdeXSI9asY1Q31gOhWUZV4\"\n",
+    "AURA_INSTANCENAME=\"Instance01\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = Neo4jConnection(uri=uri, user=user, pwd=password)"
+    "# use helper class to handle Neo4j connection tasks\n",
+    "conn = Neo4jConnection(uri=NEO4J_URI, user=NEO4J_USERNAME, pwd=NEO4J_PASSWORD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "326\n"
+      "249\n"
      ]
     }
    ],
    "source": [
     "## simple example to test connection & return results\n",
     "result = conn.query('MATCH (n) RETURN COUNT(n) AS ct')\n",
-    "# print(result)\n",
     "# Consume the result object\n",
     "print(result[0]['ct'])"
    ]
@@ -89,33 +127,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cypher Query Examples"
+    "# Cypher Query Examples"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Execute Cypher read query and process results"
+    "## Execute Cypher read query and process results\n",
+    "\n",
+    "### Which characters does Han Solo interact with the most?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chewbacca 77\n",
+      "Leia Organa 69\n",
+      "C-3PO 54\n",
+      "Luke Skywalker 43\n",
+      "Finn 23\n",
+      "R2-D2 18\n",
+      "Rey 17\n",
+      "LANDO 12\n",
+      "Obi-Wan Kenobi 10\n",
+      "BB8 9\n"
+     ]
+    }
+   ],
    "source": [
-    "# load any parameters \n",
+    "# load any parameters using a dictionary  \n",
     "\n",
-    "params = {'name': 'Han Solo' \n",
-    "         }\n",
+    "params = {'name': 'Han Solo' }\n",
     "\n",
-    "query = \"\"\"MATCH (p:Character {name: $name})-[i:INTERACTED_WITH]-(p2:Character)\n",
+    "# cypher - who does Han Solo interact with the most?\n",
+    "query = \"\"\"MATCH (p:Character {name: $name})-[i:INTERACTS_WITH]-(p2:Character)\n",
     "           RETURN  p2.name AS otherName, i.count as interactionCount\n",
     "           ORDER BY interactionCount DESC LIMIT 10\n",
-    "           \n",
+    "    \n",
     "\"\"\"\n",
-    "\n",
     "\n",
     "result = conn.query(query, parameters=params)\n",
     "\n",
@@ -132,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -156,20 +212,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>otherName</th>\n",
+       "      <th>interactionCount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chewbacca</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Leia Organa</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C-3PO</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "     otherName  interactionCount\n",
+       "0    Chewbacca                77\n",
+       "1  Leia Organa                69\n",
+       "2        C-3PO                54"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,15 +253,15 @@
     "\n",
     "params = {'name': 'Han Solo'  }\n",
     "\n",
-    "query = \"\"\"MATCH (p:Character {name: $name})-[i:INTERACTED_WITH]-(p2:Character)\n",
+    "query = \"\"\"MATCH (p:Character {name: $name})-[i:INTERACTS_WITH]-(p2:Character)\n",
     "           RETURN  p2.name AS otherName, i.count as interactionCount\n",
     "           ORDER BY interactionCount DESC LIMIT 10         \n",
     "\"\"\"\n",
     "\n",
     "# run query to get results\n",
     "result = conn.query(query, parameters=params)\n",
-    " \n",
-    "# create a dataframe from Cypher Resultset    \n",
+    "\n",
+    "# create a dataframe from Cypher Resultset  \n",
     "dtf_data = pd.DataFrame([dict(_) for _ in result])\n",
     "dtf_data.head(3)\n"
    ]
@@ -196,80 +270,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write Data to Neo4j using DataFrame"
+    "## Write Data to Neo4j Using Dictionaries\n",
+    "\n",
+    "This example uses dictionaries to contain the information about Characters  and their home planets.   It will create (if necessary) a Character node for each dictionary in the array.  It will also create relationships between the Character nodes and the Planet nodes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'total': 5, 'batches': 1, 'time': 0.1604321002960205}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record total=3>]\n"
+     ]
     }
    ],
    "source": [
-    "def add_users_using_df(rows):\n",
+    "params = { }\n",
+    "\n",
+    "# create a batch of dictionaries - each item will be processed individually within the batch\n",
+    "bunch_of_rows = [\n",
+    " {'name':'Mark', 'gender': 'male', 'planet':'Endor','jedi':'true'},\n",
+    " {'name': 'Abby', 'gender': 'female', 'planet':'Endor', 'jedi':'false'},\n",
+    " {'name': 'Grokster', 'gender': 'male', 'planet':'Alderaan', 'jedi':'false'}\n",
+    "\n",
+    "]\n",
+    "params ['rows'] = bunch_of_rows\n",
+    "\n",
+    "query = \"\"\"\n",
+    "\n",
+    "// use UNWIND to process each item in the array\n",
+    "UNWIND $rows AS row\n",
+    "     MERGE (u:Character {name: row.name})\n",
+    "     SET u.gender = row.gender,\n",
+    "         u.jedi = toBoolean(row.jedi)\n",
+    "         \n",
+    "    // now create a relationship from the Character to their home planet\n",
     "    \n",
-    "    query = \"\"\"UNWIND $rows AS row\n",
-    "               MERGE (u:User {id: row.id})\n",
-    "               SET u.name = row.name \n",
-    "               RETURN COUNT(*) AS total\n",
-    "            \"\"\"\n",
-    "    \n",
-    "    return insert_data(query, rows)\n",
+    "     WITH u, row.planet as homePlanet\n",
+    "         // find the planet and create a relationship to it\n",
+    "        MATCH (p:Planet)\n",
+    "            WHERE p.name = homePlanet\n",
+    "        MERGE (u)-[:FROM]->(p)\n",
+    "return count(*) as total\n",
+    "\"\"\"\n",
     "\n",
-    "\n",
-    "user_data = {\n",
-    "    'id': [0, 1, 2, 3, 4],\n",
-    "    'name': ['Alice', 'Brian', 'Carla', 'David', 'Ed']\n",
-    "}\n",
-    "\n",
-    "user_df = pd.DataFrame(user_data)\n",
-    "user_df.head()\n",
-    "\n",
-    "add_users_using_df(user_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Utility method for inserting records into Neo using batches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def insert_data(query, rows, batch_size = 10000):\n",
-    "    # Function to handle the updating the Neo4j database in batch mode.\n",
-    "    \n",
-    "    total = 0\n",
-    "    batch = 0\n",
-    "    start = time.time()\n",
-    "    result = None\n",
-    "    \n",
-    "    while batch * batch_size < len(rows):\n",
-    "\n",
-    "        res = conn.query(query, \n",
-    "                         parameters = {'rows': rows[batch*batch_size:(batch+1)*batch_size].to_dict('records')})\n",
-    "        total += res[0]['total']\n",
-    "        batch += 1\n",
-    "        result = {\"total\":total, \n",
-    "                  \"batches\":batch, \n",
-    "                  \"time\":time.time()-start}\n",
-    "        \n",
-    "    return result"
+    "# run query to get results\n",
+    "result = conn.query(query, parameters=params)\n",
+    "print (result)\n"
    ]
   },
   {
